# ml-learning-alignment

./: README.md  pyproject.toml
alignment/: example.py  score_quality.py
alignment/approaches/: approach_00.py  approach_01.py  approach_02.py  approach_03.py  approach_04.py
alignment/tests/: test_approach_02.py  test_approach_03.py
